# Ember-P2P

./: .gitattributes  .gitignore  FUTURE_WORK.md  README.md  SETTINGS_OPTIONS_PLAN.md  build.bat  dev.bat  package-lock.json  package.json  release.bat  reset-main.bat  tsconfig.json  vite.config.js
.github/workflows/: release.yml
docs/: ember-dht-slice.md  ember-native-transport-slice.md  ember-network-harness.md  ember-survival-plan.md  i18n.md  index.html
emulesource/: 3DPreviewControl.cpp  AICHSyncThread.cpp  AICHSyncThread.h  AbstractFile.cpp  AbstractFile.h  AddFriend.cpp  AddFriend.h  AddSourceDlg.cpp  AddSourceDlg.h  ArchivePreviewDlg.cpp  ArchivePreviewDlg.h  ArchiveRecovery.cpp  ArchiveRecovery.h  AsyncProxySocketLayer.cpp  AsyncProxySocketLayer.h  AsyncSocketEx.cpp  AsyncSocketEx.h  AsyncSocketExLayer.cpp  AsyncSocketExLayer.h  BarShader.cpp  BarShader.h  BaseClient.cpp  BuddyButton.cpp  ButtonsTabCtrl.cpp  CaptchaGenerator.cpp  CaptchaGenerator.h  CatDialog.cpp  ChatSelector.cpp  ChatSelector.h  ChatWnd.cpp  ChatWnd.h  ClientCredits.cpp  ClientCredits.h  ClientDetailDialog.cpp  ClientDetailDialog.h  ClientList.cpp  ClientList.h  ClientListCtrl.cpp  ClientListCtrl.h  ClientStateDefs.h  (+341 more)
emulesource/kademlia/io/: ByteIO.cpp  ByteIO.h  DataIO.cpp  IOException.cpp
emulesource/kademlia/kademlia/: Entry.cpp  Entry.h  Indexed.cpp  Prefs.cpp  Prefs.h  Search.cpp  Search.h  SearchManager.cpp  Tag.h  UDPFirewallTester.cpp  UDPFirewallTester.h
emulesource/kademlia/net/: KademliaUDPListener.cpp  PacketTracking.cpp  PacketTracking.h
emulesource/kademlia/routing/: Contact.h  RoutingBin.cpp  RoutingBin.h  RoutingZone.cpp  RoutingZone.h
emulesource/kademlia/utils/: KadClientSearcher.h  KadUDPKey.h  LookupHistory.cpp  LookupHistory.h  ThreadName.h  UInt128.cpp  UInt128.h
emulesource/lang/: ar_AE.rc  ar_AE.vcxproj  ba_BA.rc  ba_BA.vcxproj  bg_BG.rc  bg_BG.vcxproj  ca_ES.rc  ca_ES.vcxproj  cz_CZ.rc  cz_CZ.vcxproj  da_DK.rc  da_DK.vcxproj  de_DE.rc  de_DE.vcxproj  el_GR.rc  el_GR.vcxproj  es_AS.rc  es_AS.vcxproj  es_ES_T.rc  es_ES_T.vcxproj  et_EE.rc  et_EE.vcxproj  fa_IR.rc  fa_IR.vcxproj  fi_FI.rc  fi_FI.vcxproj  fr_BR.rc  fr_BR.vcxproj  fr_FR.rc  fr_FR.vcxproj  gl_ES.rc  gl_ES.vcxproj  he_IL.rc  he_IL.vcxproj  hu_HU.rc  hu_HU.vcxproj  it_IT.rc  it_IT.vcxproj  jp_JP.rc  jp_JP.vcxproj  (+49 more)
emulesource/mbedtls/tf-psa-crypto/include/mbedtls/: threading_alt.h
emulesource/res/: emule.rc2  emuleARM64.manifest  emuleWin32.manifest  emulex64.manifest
messages/: en.json  es.json
project.inlang/: settings.json
rendezvous-server/: Cargo.toml  Dockerfile  fly.toml
rendezvous-server/src/: main.rs
scripts/: bump-version.mjs  harness.ps1
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  geoip.rs  lib.rs  main.rs  security.rs  types.rs
src-tauri/src/bandwidth/: limiter.rs  mod.rs  uss.rs
src-tauri/src/commands/: collections.rs  comments.rs  deeplink.rs  errors.rs  mod.rs  peers.rs  preview.rs  search.rs  security.rs  server.rs  settings.rs  sharing.rs  speed_test.rs  statistics.rs  transfers.rs
src-tauri/src/network/: mod.rs  rendezvous.rs  upnp.rs
src-tauri/src/network/ed2k/: a4af.rs  aich.rs  archive_recovery.rs  chunk_selection.rs  collection.rs  comments.rs  corruption_blackbox.rs  credits.rs  dead_sources.rs  ember_auth.rs  friend_connect.rs  hash.rs  messages.rs  mod.rs  multi_source.rs  part_tracker.rs  preview.rs  server.rs  server_crypt.rs  server_list.rs  server_obfuscation.rs  server_udp.rs  sources.rs  tcp_obfuscation.rs  transfer.rs  upload.rs  write_coordinator.rs
src-tauri/src/network/ember/: broker.rs  crypto.rs  friends.rs  mod.rs  nat.rs  quic.rs  relay.rs  reputation.rs  transfer.rs  transport.rs
src-tauri/src/network/ember/dht/: bootstrap.rs  engine.rs  messages.rs  mod.rs  publish.rs  routing.rs  search.rs  seeds.rs  seeds.txt  store.rs
src-tauri/src/network/kad/: bootstrap.rs  buddy.rs  firewall.rs  ip_filter.rs  messages.rs  mod.rs  obfuscation.rs  protection.rs  publish.rs  routing.rs  search.rs  store.rs  types.rs
src-tauri/src/search/: cleanup.rs  index.rs  merge.rs  mod.rs  query.rs  spam.rs
src-tauri/src/security/: antileech.rs  firewall.rs  mod.rs
src-tauri/src/sharing/: indexer.rs  manager.rs  mod.rs  watcher.rs
src-tauri/src/storage/: config.rs  database.rs  identity.rs  known_files.rs  mod.rs  paths.rs  secret_store.rs  statistics.rs
src-tauri/windows/: hooks.nsh
src/lib/: a11y.ts  i18n.ts  utils.ts
src/lib/actions/: passiveScroll.ts
src/lib/api/: collections.ts  comments.ts  deeplink.ts  ember.ts  friends.ts  kad.ts  peers.ts  preview.ts  reputation.ts  search.ts  security.ts  server.ts  settings.ts  sharing.ts  statistics.ts  transfers.ts
src/lib/components/: AboutDialog.svelte  BrowseFriendDialog.svelte  ChatConversation.svelte  ChatDock.svelte  ChatSidebar.svelte  CloseAppDialog.svelte  ConfirmDialog.svelte  DeepLinkHandler.svelte  FileList.svelte  IconX.svelte  KeyboardShortcutsDialog.svelte  LibraryVirtualTable.svelte  PartsBar.svelte  ProgressBar.svelte  SearchBar.svelte  SetupWizard.svelte  Sidebar.svelte  SpeedInput.svelte  SplashScreen.svelte  StatusBar.svelte  Toast.svelte  ToggleSwitch.svelte  UpdateNotice.svelte
src/lib/stores/: chatTabs.ts  collection.ts  devTools.ts  friends.ts  network.ts  search.ts  settings.ts  theme.ts  toast.ts  transfers.ts  updater.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/dev/ember/: +page.svelte
src/routes/ember/: +page.svelte
src/routes/friends/: +page.svelte
src/routes/kad-network/: +page.svelte
src/routes/peers/: +page.svelte
src/routes/search/: +page.svelte
src/routes/security/: +page.svelte
src/routes/servers/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/sharing/: +page.svelte
src/routes/statistics/: +page.svelte
src/routes/transfers/: +page.svelte
