[package]
name = "ember-rendezvous"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
