[package]
name = "ember"
version = "1.0.9"
description = "A decentralized P2P file sharing application"
authors = ["you"]
license = "GPL-3.0-only"
edition = "2021"
# `str::floor_char_boundary` (used in the ed2k collection parser and the
# comment store) was stabilized in Rust 1.91. Older toolchains fail to
# build with a non-obvious error; declaring MSRV here makes `cargo`
# surface a clean "package requires rustc 1.91" message instead.
rust-version = "1.91"

[lib]
name = "ember_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Local multi-node harness build. Enables Tauri's runtime devtools so
# `scripts\harness.ps1` users can invoke `ember_ping_peer` and friends
# from the webview console (Ctrl+Shift+I) without shipping that
# capability to production builds.
harness = ["tauri/devtools"]

[dependencies]
# `tray-icon` enables the `tauri::tray` and `tauri::menu` APIs we use to
# render the "Ember is still running in the system tray" icon when the
# user closes the window with the close-to-tray behavior selected.
tauri = { version = "2", features = ["tray-icon"] }

tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
walkdir = "2"
md4 = "0.10"
md-5 = "0.10"
sha1 = { version = "0.10", features = ["oid"] }
digest = "0.10"
byteorder = "1"
rand = "0.8"
flate2 = "1"
hex = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
sha2 = "0.10"
igd-next = { version = "0.15", features = ["aio_tokio"] }
socket2 = "0.5"
tracing-appender = "0.2.4"
tauri-plugin-single-instance = "2.4.0"
# Registers the `ed2k://` URI scheme with the OS so browser/forum links
# launch (or focus) Ember. Combined with single-instance, a link clicked
# while Ember is already running is delivered to the existing instance as
# a command-line argument rather than spawning a second copy.
tauri-plugin-deep-link = "2"

tauri-plugin-process = "2"
# In-app auto-update: fetches the signed `latest.json` manifest from
# GitHub Releases, verifies the bundle against the minisign `pubkey` in
# tauri.conf.json, downloads, and relaunches via tauri-plugin-process.
tauri-plugin-updater = "2"
rsa = "0.9"
signature = "2"
num-bigint-dig = "0.8"
opener = "0.8.4"
crc32fast = "1.5.0"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
snow = "0.9"
chacha20poly1305 = "0.10"
lz4_flex = "0.11"
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
strsim = "0.11"
zip = "2"
fs2 = "0.4"
maxminddb = "0.28"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
parking_lot = "0.12"
notify-debouncer-mini = { version = "0.7", default-features = false }
# Used by the AntiLeech filter to compile the user-editable pattern list
# into matchable regex automata. `default-features = false` strips the
# Unicode tables we don't need (we match ASCII-only client-software
# strings) — saves ~250 KiB binary and ~50 ms startup compile time.
regex = { version = "1", default-features = false, features = ["std", "perf"] }
lofty = "0.22.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
# Unwind on panic so tokio task panics surface via JoinHandle instead of
# killing the whole process. A single malformed network packet or corrupt
# file should never take down a long-running P2P client.
panic = "unwind"
